[tool.poetry]
name = "pypmsi"
version = "0.2.3"
description = "parser for french PMSI files in python / pola.rs"
authors = ["GuillaumePressiat <guillaume.pressiat@chu-brest.fr>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.20.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
