[tool.poetry]
name = "pypmsi"
version = "0.2.5"
description = "parser for french PMSI files in python / pola.rs"
authors = ["GuillaumePressiat <guillaume.pressiat@chu-brest.fr>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^1.0.0rc2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
